--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
   Absolute Path (external link)
-
+  <a href="https://www.google.com" target="_blank">GOOGLE</a>
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
+  <br> 
   Relative Path (internal link)
-
+  <a href="about.html">About</a>
+  <br> 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
+  <a href="https://en.wikipedia.org/wiki/Lion" target="_blank">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" 
+    alt="a lion" 
+    width="500" height="500"
+    title="Rawr">
+  </a>
 
 </body>
 </html>
